# affinder

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  transform.md  usage.html
.github/workflows/: build-docs.yml  deploy-docs.yml  plugin_preview.yml  test_and_deploy.yml
.napari/: DESCRIPTION.md  config.yml
_sources/: index.rst.txt
affinder/: __init__.py  affinder.py  main.py  plugin.py
affinder/_tests/: test_affinder.py
docs/: conf.py  index.rst  replace_description_text.py  transform.rst  usage.rst
example_data/: about_example.md
examples/: basic-example.py
src/affinder/: __init__.py  _test_data.py  affinder.py  apply_tf.py  copy_tf.py  load_tf.py  main.py  napari.yaml  plugin.py
src/affinder/_tests/: test_affinder.py
src/affinder/_tests/label0.zarr/: 0.0  0.1
src/affinder/_tests/label1.zarr/: .zarray  0.0  1.0
src/affinder/_tests/labels0.zarr/: .zarray  0.0
src/affinder/_tests/labels1.zarr/: 0.0
src/affinder/_tests/load_test/: 2D_test_affine.txt
src/affinder/_tests/nuclei2D_labels.zarr/: .zarray  0.0
src/affinder/_tests/nuclei2D_transformed_labels.zarr/: .zarray  0.0
src/affinder/_tests/nuclei3D_labels.zarr/: .zarray  0.0.0
