[metadata]
name = affinder
author = Juan Nunez-Iglesias
author_email = juan.nunez-iglesias@monash.edu
license = BSD-3
description = Quickly find the affine matrix mapping one image to another using manual correspondence points annotation
url = https://github.com/jni/affinder
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
package_dir =
    =src
include_package_data = True
packages = find:
setup_requires = setuptools_scm
install_requires =
    napari>=0.4.17
    npe2>=0.1.2
    numpy
    scikit-image
    magicgui>=0.3.7
    toolz
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts = affinder=affinder.main:main
napari.manifest = 
    affinder = affinder:napari.yaml

[options.extras_require]
testing =
    coverage
    pytest
    pytest-cov
    pytest-qt
    scikit-image[data]
    napari[pyqt5]!=0.4.18
    pygments!=2.16
    zarr
docs = 
    furo
    myst-parser
[options.package_data]
affinder = napari.yaml
